--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -4,6 +4,10 @@ body {
   line-height: 20px;
 }
 
+div.section {
+  margin-bottom: 40px;
+}
+
 div.photo {
   position: relative;
   overflow: hidden;
