added language selection

--- a/src/Css/App.css
+++ b/src/Css/App.css
@@ -8,6 +8,10 @@ div.section {
   margin-bottom: 40px;
 }
 
+div.language {
+  text-align: right;
+}
+
 div.photo {
   position: relative;
   overflow: hidden;
